objects/HoldingObj__c.object
<CustomObject>
    <description>Generic holding object for importing Students/Staff records from a .CSV file.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Date__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Id__c</fullName>
        <label>Section Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Type of Course for the Class</description>
        <label>Course Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Daily_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Attendance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debug_Message__c</fullName>
        <label>Debug Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability_Flag__c</fullName>
        <inlineHelpText>Y/N</inlineHelpText>
        <label>Disability Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELL__c</fullName>
        <label>ELL</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnic_Cde__c</fullName>
        <label>Ethnicity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Level__c</fullName>
        <label>Grade</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Homework__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Section has homework</description>
        <label>Has Homework</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lep_Flag__c</fullName>
        <inlineHelpText>Y/N</inlineHelpText>
        <label>Lep Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Student_ID__c</fullName>
        <label>Local Student ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lunch_Status__c</fullName>
        <label>Lunch Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Code__c</fullName>
        <label>Network Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <description>Network Code</description>
        <label>Network</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propagated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Propagated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Name of the record type</description>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>Unique key for Holding Record</description>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Id__c</fullName>
        <description>Id for the Reporting Period; needs to be written from Scheduler and then picked up in the publish process.</description>
        <label>Reporting Period Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Dbn__c</fullName>
        <label>School Dbn</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Propagated__c</fullName>
        <description>Flag to denote whether a school object was created from this holding object.</description>
        <inlineHelpText>Y/N</inlineHelpText>
        <label>School Propagated</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <label>School Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Propagated__c</fullName>
        <description>Flag to denote whether a Section object was created from this particular object.</description>
        <inlineHelpText>Y/N</inlineHelpText>
        <label>Section Propagated</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Gender</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Code__c</fullName>
        <label>Staff Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_ID__c</fullName>
        <label>Staff ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <label>Student Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Propagated__c</fullName>
        <description>Flag to test if a student was propagated from this particular holding object.</description>
        <inlineHelpText>Y/N</inlineHelpText>
        <label>Student Propagated</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Student or Staff</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set Record to Active or inactive</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>HoldingObj</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Propagated__c</columns>
        <columns>Student_Id__c</columns>
        <columns>School_Year__c</columns>
        <columns>DOB__c</columns>
        <columns>First_Name__c</columns>
        <columns>Class_Id__c</columns>
        <columns>Error_Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>School_Dbn__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Admission_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Holding_Objs</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>School_Name__c</columns>
        <columns>Student_Id__c</columns>
        <columns>Local_Student_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Holding Objs</label>
        <sharedTo>
            <roleAndSubordinates>Admin</roleAndSubordinates>
            <roleAndSubordinates>CY_HQ</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Staff</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>Reference_Id__c</columns>
        <columns>Propagated__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>School_Dbn__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Class_Id__c</columns>
        <columns>Staff_ID__c</columns>
        <columns>Staff_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>sell</value>
        </filters>
        <label>Staff</label>
    </listViews>
    <listViews>
        <fullName>Students</fullName>
        <columns>Type__c</columns>
        <columns>Student_Id__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>School_Dbn__c</columns>
        <columns>School_Year__c</columns>
        <columns>Class_Id__c</columns>
        <columns>Reporting_Period_Id__c</columns>
        <columns>Grade_Level__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Propagated__c</columns>
        <columns>Network_Code__c</columns>
        <columns>NAME</columns>
        <columns>Section_Propagated__c</columns>
        <columns>Student_Propagated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>Section</value>
        </filters>
        <label>Denver Student/Sections</label>
        <sharedTo>
            <role>Denver_Site_Admin</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HoldingObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>