objects/HoldingObj__c/listViews/All_Holding_Objs.listView-meta.xml
<ListView>
    <fullName>All_Holding_Objs</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>School_Name__c</columns>
    <columns>Student_Id__c</columns>
    <columns>Local_Student_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Holding Objs</label>
    <sharedTo>
        <roleAndSubordinates>Admin</roleAndSubordinates>
        <roleAndSubordinates>CY_HQ</roleAndSubordinates>
    </sharedTo>
</ListView>