objects/HoldingObj__c/listViews/Staff.listView-meta.xml
<ListView>
    <fullName>Staff</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>Reference_Id__c</columns>
    <columns>Propagated__c</columns>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>School_Dbn__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Class_Id__c</columns>
    <columns>Staff_ID__c</columns>
    <columns>Staff_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>andie</value>
    </filters>
    <label>Staff</label>
</ListView>